--- a/Relatable/Relatable.IntegrationTests/Relatable.IntegrationTests.csproj
+++ b/Relatable/Relatable.IntegrationTests/Relatable.IntegrationTests.csproj
@@ -21,6 +21,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Relatable\Relatable.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
 
